# Open-2D-Studio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml  snap.yml
docs/: API.md
scripts/: bump-version.js  generate-file-icons.py
snap/: snapcraft.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh  installer.nsi
src-tauri/src/: api_server.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/api/: application.ts  entities.ts  viewport.ts
src/api/commands/: registry.ts
src/api/mcp/: server.ts  (+1 more)
src/commands/: index.ts  types.ts
src/constants/: cadDefaults.ts
src/extensions/: extensionApi.ts  extensionLoader.ts  extensionService.ts  index.ts  registryService.ts  types.ts
src/hooks/: useCanvasEvents.ts  useDrawingKeyboard.ts  useIfcAutoRegenerate.ts  useKeyboardShortcuts.ts  usePileAutoDimensioning.ts  usePileAutoNumbering.ts  usePileAutoPuntniveau.ts  useSpaceAutoUpdate.ts
src/services/: fileService.ts  index.ts
src/state/: appStore.ts  documentStore.ts
src/styles/: globals.css
src/types/: dimension.ts  draft.ts  drawing.ts  filledRegion.ts  geometry.ts  guards.ts  hatch.ts  index.ts  parametric.ts  projectInfo.ts  sheet.ts
src/units/: format.ts  index.ts
src/utils/: coordinateParser.ts  expressionParser.ts  gridDimensionUtils.ts  gridlineUtils.ts  ifcCategoryUtils.ts  pileAutoNumbering.ts  pileDimensionUtils.ts
templates/.claude/: settings.local.json
(+215 files in other folders)
